--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ chardet==3.0.4
 Click==7.0
 colorama==0.4.3
 cryptography==2.8
+dj-database-url==0.5.0
 feedparser==6.0.2
 psycopg2-binary==2.8.6
 pyTelegramBotAPI==3.7.7
